@@ -871,6 +871,8 @@ ConfigView.label.seeding.preferLargerSwarms.tooltip=If you are mainly seeding to
 ConfigView.label.seeding.preferLargerSwarms=When torrents have the same rank, prefer larger swarms
 ConfigView.label.seeding.rankType.none.tooltip=Order based on # column
 ConfigView.label.seeding.rankType.none=None
+ConfigView.label.seeding.rankType.peer.tooltip=more peers and fewer seeds = higher rank\nThis ranking minimizes the number of torrents that need to be kept active to maximize the upload
+ConfigView.label.seeding.rankType.peer=Weighted Peer Count
 ConfigView.label.seeding.rankType.peerSeed.options=Seeds:Peers Ratio Options
 ConfigView.label.seeding.rankType.peerSeed.tooltip=Higher Ratio = Higher Rank
 ConfigView.label.seeding.rankType.peerSeed=Peers:Seed Ratio
